--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,530 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
-p {
-  color: pink; }
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after {
+  content: '';
+  content: none; }
+
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+header {
+  position: relative;
+  height: 50vh;
+  overflow: hidden; }
+
+.header__video {
+  width: 100%; }
+
+.header__cover {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  transition: opacity .5s; }
+
+.header__cover--active {
+  opacity: 1; }
+
+.header__showreel {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  color: #fff;
+  font-size: 1.4rem;
+  font-weight: bold;
+  border-bottom: 2px solid #53c0c4;
+  cursor: pointer; }
+
+.nav {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 170px;
+  padding: 0px 90px; }
+
+.nav__logo-wrap {
+  float: left;
+  height: 100%; }
+  .nav__logo-wrap::before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+
+.nav__logo {
+  display: inline-block;
+  width: 170px;
+  height: 80px;
+  background: no-repeat center/100% url(../images/yambo_white.png);
+  vertical-align: middle; }
+
+.nav__menu-wrap {
+  float: right;
+  height: 100%; }
+  .nav__menu-wrap::before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+
+.nav__menu {
+  display: inline-block;
+  vertical-align: middle; }
+
+.nav__menu-button {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+  margin-left: 30px;
+  cursor: pointer; }
+  .nav__menu-button::before, .nav__menu-button::after {
+    position: absolute;
+    top: 50%;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    transform: translate3d(0px, -7px, 0);
+    transition: transform .2s; }
+  .nav__menu-button::after {
+    transform: translate3d(0, 5px, 0); }
+
+.nav__menu-button--active::before {
+  transform: translate3d(0px, -50%, 0) rotate(-45deg); }
+
+.nav__menu-button--active::after {
+  transform: translate3d(0px, -50%, 0) rotate(45deg); }
+
+.sticky-nav {
+  box-sizing: border-box;
+  position: fixed;
+  top: 0px;
+  width: 100vw;
+  height: 100px;
+  padding: 0px 90px;
+  background: #fff;
+  z-index: 1;
+  transition: transform .7s;
+  transform: translate3d(0, -100%, 0); }
+
+.sticky-nav--visible {
+  transform: none; }
+
+.sticky-nav__logo-wrap {
+  float: left;
+  height: 100%; }
+  .sticky-nav__logo-wrap::before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+
+.sticky-nav__logo {
+  display: inline-block;
+  width: 120px;
+  height: 60px;
+  background: no-repeat center/100% url(../images/yambo_black.png);
+  vertical-align: middle; }
+
+.sticky-nav__menu-wrap {
+  float: right;
+  height: 100%; }
+  .sticky-nav__menu-wrap::before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+
+.sticky-nav__menu {
+  display: inline-block;
+  vertical-align: middle; }
+
+section {
+  width: 90vw;
+  margin: 130px auto 0px auto; }
+
+footer {
+  width: 90vw;
+  height: 240px;
+  padding: 90px 0px 50px 0px;
+  border-top: 1px solid #999;
+  margin: auto;
+  overflow: hidden; }
+
+.footer__logo-wrap {
+  float: left;
+  width: 17%;
+  height: 100%; }
+
+.footer__logo {
+  width: 130px;
+  height: 60px;
+  background: no-repeat center/100% url(../images/yambo_black.png);
+  margin: auto; }
+
+.footer__info-wrap {
+  position: relative;
+  float: right;
+  width: 70%;
+  height: 100%; }
+
+.footer__info {
+  position: absolute;
+  top: 0px; }
+  .footer__info--contacts {
+    left: 0%; }
+  .footer__info--find-us {
+    left: 30%; }
+  .footer__info--newsletter {
+    width: 33%;
+    left: 63%; }
+
+.footer__info-title {
+  color: #bbb;
+  font-size: 0.9rem;
+  font-weight: bold;
+  line-height: 1.3;
+  margin-bottom: 3px; }
+
+.footer__info-description {
+  font-size: 0.9rem;
+  line-height: 1.6;
+  color: #444; }
+
+.footer__app-wrap {
+  margin-top: 50px; }
+
+.footer__app {
+  margin-right: 15px;
+  color: #aaa;
+  font-size: 0.9rem; }
+  .footer__app:hover {
+    color: #53c0c4; }
+
+.footer__form {
+  width: 100%;
+  margin: 25px 0px 12px 0px;
+  border-bottom: 1px solid #999;
+  padding-bottom: 7px; }
+
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #bbb;
+  font-size: 0.9rem;
+  opacity: 1;
+  /* Firefox */ }
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #bbb;
+  font-size: 0.9rem; }
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #bbb;
+  font-size: 0.9rem; }
+
+.footer__input {
+  width: 70%;
+  outline: none;
+  padding: 0px;
+  font-size: 0.9rem;
+  color: #444;
+  border: none; }
+
+.footer__submit-button {
+  width: 30%;
+  color: #000;
+  border: none;
+  outline: none;
+  background: transparent;
+  font-size: 0.9rem;
+  transition: color .2s;
+  padding: 0px;
+  cursor: pointer; }
+  .footer__submit-button:hover {
+    color: #53c0c4; }
+
+.footer__form-message {
+  color: #bd1a1a;
+  font-size: 0.9rem; }
+  .footer__form-message--submitted {
+    color: #0f8f2b; }
+
+.footer__copyright-policy {
+  position: absolute;
+  bottom: 0px;
+  left: 0%;
+  color: #aaa;
+  font-size: 0.7rem;
+  font-weight: bold;
+  line-height: 1.4; }
+
+.project {
+  height: 0px;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  margin-bottom: 10px;
+  transition: transform 1.2s, opacity 1.2s; }
+  .project:hover .project__image {
+    transform: scale(1.05); }
+  .project:hover .project__footer {
+    opacity: 1; }
+  .project:hover .project__description, .project:hover .project__quick-view {
+    transform: none; }
+
+.project--invisible {
+  opacity: 0;
+  transform: translate3d(0px, 5%, 0px); }
+
+.project-inner {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%; }
+
+.project__image {
+  width: 100%;
+  height: 100%;
+  transition: transform .5s; }
+
+.project__title {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  padding: 25px;
+  color: #fff;
+  font-size: 2rem;
+  font-weight: bold; }
+
+.project__footer {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent);
+  padding: 50px 15px 0px 15px;
+  color: #fff;
+  overflow: hidden;
+  transition: opacity .3s;
+  opacity: 0; }
+
+.project__description {
+  float: left;
+  transition: transform .5s;
+  transform: translate3d(0, 150%, 0);
+  margin-bottom: 15px; }
+
+.project__quick-view {
+  float: right;
+  transition: transform .5s;
+  transform: translate3d(0, 150%, 0);
+  margin-bottom: 15px; }
+
+.modal {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.9);
+  z-index: 2;
+  visibility: hidden;
+  opacity: 0;
+  color: #fff; }
+
+.modal--active {
+  transition: visibility .1s, opacity .4s .1s;
+  visibility: visible;
+  opacity: 1; }
+
+.modal--deactive {
+  transition: opacity .4s, visibility .1s .4s;
+  visibility: hidden;
+  opacity: 0; }
+
+@keyframes cross {
+  0% {
+    transform: translate3d(-100%, 0, 0); }
+  100% {
+    transform: translate3d(0, 0, 0);
+    background: #53c0c4; } }
+
+.modal__close-button {
+  position: absolute;
+  top: 30px;
+  right: 70px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer; }
+  .modal__close-button:hover .modal__close-button-line1::before {
+    animation: cross .3s forwards; }
+  .modal__close-button:hover .modal__close-button-line2::before {
+    transform: translate3d(-100%, 0, 0);
+    animation: cross .3s .2s forwards; }
+
+.modal__close-button-line1, .modal__close-button-line2 {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 2px;
+  overflow: hidden; }
+  .modal__close-button-line1::before, .modal__close-button-line2::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: #fff; }
+
+.modal__close-button-line1 {
+  transform: translate3d(0, -50%, 0) rotate(-45deg); }
+
+.modal__close-button-line2 {
+  transform: translate3d(0, -50%, 0) rotate(45deg); }
+
+.modal__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0); }
+
+.modal__video-wrap {
+  position: relative;
+  width: 70vw;
+  padding-top: 56.5%;
+  height: 0px;
+  margin-bottom: 15px; }
+
+.modal__video {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%; }
+
+.modal__loading-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  width: 50px;
+  height: 50px;
+  background: no-repeat center/100% url("../img/loading-icon.gif"); }
+
+.modal__loading-icon--invisible {
+  visibility: hidden; }
+
+.modal__details {
+  overflow: hidden; }
+
+.modal__details--deactive {
+  display: none; }
+
+.modal__title {
+  font-weight: bold;
+  font-size: 2rem;
+  margin-bottom: 3px; }
+
+.modal__description {
+  float: left;
+  font-size: 1.4rem; }
+
+.modal__more-button {
+  float: right;
+  font-size: 1.4rem; }
+
+.menu-item {
+  display: inline-block;
+  margin-right: 25px;
+  text-decoration: none;
+  overflow: hidden; }
+  .menu-item:nth-last-child(1) {
+    margin-right: 0px; }
+  .menu-item:hover .menu-item__underline {
+    opacity: 1;
+    transform: none; }
+
+.menu-item--active .menu-item__underline {
+  opacity: 1;
+  transform: none; }
+
+.menu-item__name {
+  line-height: 1.3;
+  font-size: 1.4rem; }
+
+.menu-item__underline {
+  width: 100%;
+  height: 3px;
+  background: #53c0c4;
+  transition: opacity .3s, transform .3s;
+  opacity: 0;
+  transform: translate3d(-100%, 0, 0); }
+
+.menu-animation {
+  opacity: 0;
+  visibility: hidden; }
+
+.menu-animation--active {
+  transition: visibility .1s, opacity .5s .1s;
+  opacity: 1;
+  visibility: visible; }
+
+.menu-animation--deactive {
+  transition: opacity .5s, visibility .1s .5s;
+  opacity: 0;
+  visibility: hidden; }
+
+.loader {
+  width: 90vw;
+  margin: 0px auto 15px auto;
+  visibility: hidden; }
+
+.loader--loading {
+  visibility: visible; }
+
+.loading-icon {
+  width: 60px;
+  height: 60px;
+  background: no-repeat center/100% url("../images/loading-icon.gif");
+  margin: auto; }
 
 /*# sourceMappingURL=main.css.map */
