--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -13,7 +13,7 @@ footer {
 
 .footer__logo {
   width: 130px; height: 60px;
-  background: no-repeat center/100% url(../images/yambo_black.png);
+  background: no-repeat center/100% url('../images/yambo_black.png');
   margin: auto;
 }
 
