--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -22,7 +22,7 @@
 .nav__logo {
   display: inline-block;
   width: 170px; height: 80px;
-  background: no-repeat center/100% url(../images/yambo_white.png);
+  background: no-repeat center/100% url('../images/yambo_white.png');
   vertical-align: middle;
 }
 
