--- a/sass/partials/_sticky-nav.scss
+++ b/sass/partials/_sticky-nav.scss
@@ -30,7 +30,7 @@
 .sticky-nav__logo {
   display: inline-block;
   width: 120px; height: 60px;
-  background: no-repeat center/100% url(../images/yambo_black.png);
+  background: no-repeat center/100% url('../images/yambo_black.png');
   vertical-align: middle;
 }
 
