--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -28,6 +28,6 @@ header {
   color: #fff;
   font-size: 1.4rem;
   font-weight: bold;
-  border-bottom: 2px solid $underline-color;
+  border-bottom: 2px solid $main-color;
   cursor: pointer;
 }
