--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,6 @@
+body {
+  background: #000; }
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -135,7 +138,7 @@ header {
   width: 100vw;
   height: 100px;
   padding: 0px 90px;
-  background: #fff;
+  background: #000;
   z-index: 1;
   transition: transform .7s;
   transform: translate3d(0, -100%, 0); }
@@ -156,7 +159,7 @@ header {
   display: inline-block;
   width: 120px;
   height: 60px;
-  background: no-repeat center/100% url("../images/yambo_black.png");
+  background: no-repeat center/100% url("../images/yambo_white.png");
   vertical-align: middle; }
 
 .sticky-nav__menu-wrap {
@@ -173,14 +176,13 @@ header {
   vertical-align: middle; }
 
 section {
-  width: 90vw;
+  width: 100vw;
   margin: 130px auto 0px auto; }
 
 footer {
-  width: 90vw;
+  width: 100vw;
   height: 240px;
   padding: 90px 0px 50px 0px;
-  border-top: 1px solid #999;
   margin: auto;
   overflow: hidden; }
 
@@ -192,7 +194,7 @@ footer {
 .footer__logo {
   width: 130px;
   height: 60px;
-  background: no-repeat center/100% url("../images/yambo_black.png");
+  background: no-repeat center/100% url("../images/yambo_white.png");
   margin: auto; }
 
 .footer__info-wrap {
@@ -222,7 +224,7 @@ footer {
 .footer__info-description {
   font-size: 0.9rem;
   line-height: 1.6;
-  color: #444; }
+  color: #fff; }
 
 .footer__app-wrap {
   margin-top: 50px; }
@@ -262,12 +264,13 @@ footer {
   outline: none;
   padding: 0px;
   font-size: 0.9rem;
-  color: #444;
+  color: #fff;
+  background: transparent;
   border: none; }
 
 .footer__submit-button {
   width: 30%;
-  color: #000;
+  color: #fff;
   border: none;
   outline: none;
   background: transparent;
@@ -294,15 +297,19 @@ footer {
   line-height: 1.4; }
 
 .project {
-  height: 0px;
-  display: inline-block;
+  float: left;
+  width: 25vw;
+  height: 25vw;
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  margin-bottom: 10px;
   transition: transform 1.2s, opacity 1.2s; }
   .project:hover .project__image {
     transform: scale(1.05); }
+  .project:hover .project__header {
+    opacity: 1; }
+  .project:hover .project__title {
+    transform: none; }
   .project:hover .project__footer {
     opacity: 1; }
   .project:hover .project__description, .project:hover .project__quick-view {
@@ -312,28 +319,28 @@ footer {
   opacity: 0;
   transform: translate3d(0px, 5%, 0px); }
 
-.project-inner {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%; }
-
 .project__image {
   width: 100%;
   height: 100%;
   transition: transform .5s; }
 
-.project__title {
+.project__header {
   box-sizing: border-box;
   position: absolute;
   top: 0px;
   left: 0px;
   width: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
   padding: 25px;
+  transition: opacity .3s;
+  opacity: 0; }
+
+.project__title {
   color: #fff;
   font-size: 2rem;
-  font-weight: bold; }
+  font-weight: bold;
+  transition: transform .5s;
+  transform: translate3d(0, -150%, 0); }
 
 .project__footer {
   box-sizing: border-box;
@@ -342,23 +349,31 @@ footer {
   left: 0px;
   width: 100%;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent);
-  padding: 50px 15px 0px 15px;
+  padding: 50px 18px 0px 18px;
   color: #fff;
   overflow: hidden;
   transition: opacity .3s;
   opacity: 0; }
-
-.project__description {
-  float: left;
-  transition: transform .5s;
-  transform: translate3d(0, 150%, 0);
-  margin-bottom: 15px; }
 
 .project__quick-view {
   float: right;
   transition: transform .5s;
   transform: translate3d(0, 150%, 0);
   margin-bottom: 15px; }
+  .project__quick-view:hover .project__quick-view-icon, .project__quick-view:hover .project__quick-view-text {
+    transition: color .2s;
+    color: #53c0c4; }
+
+.project__quick-view-icon {
+  vertical-align: middle;
+  font-size: 1.2rem;
+  color: #fff;
+  margin-right: 3px; }
+
+.project__quick-view-text {
+  vertical-align: middle;
+  font-size: 1rem;
+  color: #fff; }
 
 .modal {
   position: fixed;
@@ -431,8 +446,7 @@ footer {
   position: relative;
   width: 70vw;
   padding-top: 56.5%;
-  height: 0px;
-  margin-bottom: 15px; }
+  height: 0px; }
 
 .modal__video {
   position: absolute;
@@ -454,23 +468,42 @@ footer {
   visibility: hidden; }
 
 .modal__details {
-  overflow: hidden; }
+  overflow: hidden;
+  margin-top: 20px; }
 
 .modal__details--deactive {
   display: none; }
 
 .modal__title {
+  float: left;
   font-weight: bold;
   font-size: 2rem;
   margin-bottom: 3px; }
 
-.modal__description {
-  float: left;
-  font-size: 1.4rem; }
+@keyframes underline-slide {
+  0% {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0); }
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0); } }
 
 .modal__more-button {
   float: right;
-  font-size: 1.4rem; }
+  text-decoration: none;
+  overflow: hidden; }
+  .modal__more-button:hover .modal__more-button-underline {
+    animation: underline-slide .5s forwards; }
+
+.modal__more-button-text {
+  font-size: 1.4rem;
+  color: #fff; }
+
+.modal__more-button-underline {
+  width: 100%;
+  height: 3px;
+  background: #53c0c4;
+  margin-top: 2px; }
 
 .menu-item {
   display: inline-block;
@@ -514,7 +547,7 @@ footer {
   visibility: hidden; }
 
 .loader {
-  width: 90vw;
+  width: 100vw;
   margin: 0px auto 15px auto;
   visibility: hidden; }
 
