--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,7 +1,6 @@
 footer {
   width: $main-width; height: 240px;
   padding: 90px 0px 50px 0px;
-  border-top: 1px solid #999;
   margin: auto;
   overflow: hidden;
 }
@@ -13,7 +12,7 @@ footer {
 
 .footer__logo {
   width: 130px; height: 60px;
-  background: no-repeat center/100% url('../images/yambo_black.png');
+  background: no-repeat center/100% url('../images/yambo_white.png');
   margin: auto;
 }
 
@@ -52,7 +51,7 @@ footer {
 .footer__info-description {
   font-size: 0.9rem;
   line-height: 1.6;
-  color: #444;
+  color: #fff;
 }
 
 .footer__app-wrap {
@@ -65,7 +64,7 @@ footer {
   font-size: 0.9rem;
 
   &:hover {
-    color: $underline-color;
+    color: $main-color;
   }
 }
 
@@ -97,13 +96,14 @@ footer {
   outline: none;
   padding: 0px;
   font-size: 0.9rem;
-  color: #444;
+  color: #fff;
+  background: transparent;
   border: none;
 }
 
 .footer__submit-button {
   width: 30%;
-  color: #000;
+  color: #fff;
   border: none;
   outline: none;
   background: transparent;
@@ -113,7 +113,7 @@ footer {
   cursor: pointer;
 
   &:hover {
-    color: $underline-color;
+    color: $main-color;
   }
 }
 
