--- a/sass/partials/_menu.scss
+++ b/sass/partials/_menu.scss
@@ -26,7 +26,7 @@
 
 .menu-item__underline {
   width: 100%; height: 3px;
-  background: $underline-color;
+  background: $main-color;
   transition: opacity .3s, transform .3s;
   opacity: 0;
   transform: translate3d(-100%, 0, 0);
