--- a/sass/partials/_modal.scss
+++ b/sass/partials/_modal.scss
@@ -27,7 +27,7 @@
   }
   100% {
     transform: translate3d(0, 0, 0);
-    background: $underline-color;
+    background: $main-color;
   }
 }
 
@@ -81,7 +81,6 @@
   position: relative;
   width: $video-width; padding-top: $video-height-ratio;
   height: 0px;
-  margin-bottom: 15px;
 }
 
 .modal__video {
@@ -104,6 +103,7 @@
 
 .modal__details {
   overflow: hidden;
+  margin-top: 20px;
 }
 
 .modal__details--deactive {
@@ -111,17 +111,41 @@
 }
 
 .modal__title {
+  float: left;
   font-weight: bold;
   font-size: 2rem;
   margin-bottom: 3px;
 }
 
-.modal__description {
-  float: left;
-  font-size: 1.4rem;
+@keyframes underline-slide {
+  0% {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 .modal__more-button {
   float: right;
+  text-decoration: none;
+  overflow: hidden;
+
+  &:hover .modal__more-button-underline {
+    animation: underline-slide .5s forwards;
+  }
+}
+
+.modal__more-button-text {
   font-size: 1.4rem;
+  color: #fff;
+}
+
+.modal__more-button-underline {
+  width: 100%; height: 3px;
+  background: $main-color;
+  margin-top: 2px;
 }
