--- a/sass/partials/_project.scss
+++ b/sass/partials/_project.scss
@@ -1,14 +1,21 @@
 .project {
-  height: 0px;
-  display: inline-block;
+  float: left;
+  width: 25vw; height: 25vw;
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  margin-bottom: 10px;
   transition: transform 1.2s, opacity 1.2s;
 
   &:hover .project__image {
     transform: scale(1.05);
+  }
+
+  &:hover .project__header {
+    opacity: 1;
+  }
+
+  &:hover .project__title {
+    transform: none;
   }
 
   &:hover .project__footer {
@@ -25,26 +32,28 @@
   transform: translate3d(0px, 5%, 0px);
 }
 
-.project-inner {
-  position: absolute;
-  top: 0px; left: 0px;
-  width: 100%; height: 100%;
-}
-
 .project__image {
   width: 100%; height: 100%;
   transition: transform .5s;
 }
 
-.project__title {
+.project__header {
   box-sizing: border-box;
   position: absolute;
   top: 0px; left: 0px;
   width: 100%;
+  background: linear-gradient(to bottom,rgba(0,0,0,0.5), transparent);
   padding: 25px;
+  transition: opacity .3s;
+  opacity: 0;
+}
+
+.project__title {
   color: #fff;
   font-size: 2rem;
   font-weight: bold;
+  transition: transform .5s;
+  transform: translate3d(0, -150%, 0);
 }
 
 .project__footer {
@@ -53,18 +62,11 @@
   bottom: 0px; left: 0px;
   width: 100%;
   background: linear-gradient(to top,rgba(0,0,0,0.5), transparent);
-  padding: 50px 15px 0px 15px;
+  padding: 50px 18px 0px 18px;
   color: #fff;
   overflow: hidden;
   transition: opacity .3s;
   opacity: 0;
-}
-
-.project__description {
-  float: left;
-  transition: transform .5s;
-  transform: translate3d(0, 150%, 0);
-  margin-bottom: 15px;
 }
 
 .project__quick-view {
@@ -72,4 +74,22 @@
   transition: transform .5s;
   transform: translate3d(0, 150%, 0);
   margin-bottom: 15px;
+
+  &:hover .project__quick-view-icon, &:hover .project__quick-view-text {
+    transition: color .2s;
+    color: $main-color;
+  }
+}
+
+.project__quick-view-icon {
+  vertical-align: middle;
+  font-size: 1.2rem;
+  color: #fff;
+  margin-right: 3px;
+}
+
+.project__quick-view-text {
+  vertical-align: middle;
+  font-size: 1rem;
+  color: #fff;
 }
