--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,12 +1,12 @@
 body {
-  background: #000; }
+  background: #000;
+  font-family: 'Roboto', sans-serif; }
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
   vertical-align: baseline; }
 
 /* HTML5 display-role reset for older browsers */
@@ -62,7 +62,7 @@ header {
   transform: translate3d(-50%, -50%, 0);
   color: #fff;
   font-size: 1.4rem;
-  font-weight: bold;
+  font-weight: 400;
   border-bottom: 2px solid #53c0c4;
   cursor: pointer; }
 
@@ -215,16 +215,17 @@ footer {
     left: 63%; }
 
 .footer__info-title {
-  color: #bbb;
+  color: #fff;
   font-size: 0.9rem;
-  font-weight: bold;
+  font-weight: 400;
   line-height: 1.3;
   margin-bottom: 3px; }
 
 .footer__info-description {
+  font-weight: 100;
   font-size: 0.9rem;
   line-height: 1.6;
-  color: #fff; }
+  color: #ddd; }
 
 .footer__app-wrap {
   margin-top: 50px; }
@@ -291,9 +292,9 @@ footer {
   position: absolute;
   bottom: 0px;
   left: 0%;
-  color: #aaa;
+  color: #ccc;
   font-size: 0.7rem;
-  font-weight: bold;
+  font-weight: 300;
   line-height: 1.4; }
 
 .project {
@@ -338,7 +339,7 @@ footer {
 .project__title {
   color: #fff;
   font-size: 2rem;
-  font-weight: bold;
+  font-weight: 400;
   transition: transform .5s;
   transform: translate3d(0, -150%, 0); }
 
@@ -366,13 +367,14 @@ footer {
 
 .project__quick-view-icon {
   vertical-align: middle;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: #fff;
-  margin-right: 3px; }
+  margin-right: 2px; }
 
 .project__quick-view-text {
   vertical-align: middle;
-  font-size: 1rem;
+  font-size: 0.9rem;
+  font-weight: 300;
   color: #fff; }
 
 .modal {
@@ -476,7 +478,7 @@ footer {
 
 .modal__title {
   float: left;
-  font-weight: bold;
+  font-weight: 400;
   font-size: 2rem;
   margin-bottom: 3px; }
 
@@ -496,6 +498,7 @@ footer {
     animation: underline-slide .5s forwards; }
 
 .modal__more-button-text {
+  font-weight: 300;
   font-size: 1.4rem;
   color: #fff; }
 
@@ -503,7 +506,7 @@ footer {
   width: 100%;
   height: 3px;
   background: #53c0c4;
-  margin-top: 2px; }
+  margin-top: 4px; }
 
 .menu-item {
   display: inline-block;
@@ -522,7 +525,8 @@ footer {
 
 .menu-item__name {
   line-height: 1.3;
-  font-size: 1.4rem; }
+  font-size: 1.4rem;
+  font-weight: 300; }
 
 .menu-item__underline {
   width: 100%;
