--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -41,17 +41,18 @@ footer {
 }
 
 .footer__info-title {
-  color: #bbb;
+  color: #fff;
   font-size: 0.9rem;
-  font-weight: bold;
+  font-weight: 400;
   line-height: 1.3;
   margin-bottom: 3px;
 }
 
 .footer__info-description {
+  font-weight: 100;
   font-size: 0.9rem;
   line-height: 1.6;
-  color: #fff;
+  color: #ddd;
 }
 
 .footer__app-wrap {
@@ -129,8 +130,8 @@ footer {
 .footer__copyright-policy {
   position: absolute;
   bottom: 0px; left: 0%;
-  color: #aaa;
+  color: #ccc;
   font-size: 0.7rem;
-  font-weight: bold;
+  font-weight: 300;
   line-height: 1.4;
 }
