--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -27,7 +27,7 @@ header {
   transform: translate3d(-50%, -50%,0);
   color: #fff;
   font-size: 1.4rem;
-  font-weight: bold;
+  font-weight: 400;
   border-bottom: 2px solid $main-color;
   cursor: pointer;
 }
