--- a/sass/partials/_modal.scss
+++ b/sass/partials/_modal.scss
@@ -112,7 +112,7 @@
 
 .modal__title {
   float: left;
-  font-weight: bold;
+  font-weight: 400;
   font-size: 2rem;
   margin-bottom: 3px;
 }
@@ -140,6 +140,7 @@
 }
 
 .modal__more-button-text {
+  font-weight: 300;
   font-size: 1.4rem;
   color: #fff;
 }
@@ -147,5 +148,5 @@
 .modal__more-button-underline {
   width: 100%; height: 3px;
   background: $main-color;
-  margin-top: 2px;
+  margin-top: 4px;
 }
