refactor: navigation module
combine menu modules and nav modules to navigation.js(include css)
improve reusability of navigation module

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,10 @@
 @import 'partials/base';
 
 @import 'partials/reset';
+@import 'partials/navigation';
 @import 'partials/header';
-@import 'partials/nav';
-@import 'partials/sticky-nav';
 @import 'partials/section';
 @import 'partials/footer';
 @import 'partials/project';
 @import 'partials/modal';
-@import 'partials/menu';
 @import 'partials/loader';
