--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -34,6 +34,104 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+.navigation {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100px;
+  text-align: right;
+  z-index: 1;
+  padding: 0 90px; }
+  .navigation--detached {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 200px; }
+  .navigation--attached {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background: #000; }
+  .navigation--collapse {
+    transform: translate3d(0, -100%, 0); }
+  .navigation--stay-attached {
+    transition: transform .7s; }
+  .navigation:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+
+.navigation__item-list {
+  display: inline-block;
+  vertical-align: middle; }
+  .navigation__item-list--active {
+    transition: visibility .1s, opacity .5s .1s;
+    opacity: 1;
+    visibility: visible; }
+  .navigation__item-list--deactive {
+    transition: opacity .5s, visibility .1s .5s;
+    opacity: 0;
+    visibility: hidden; }
+
+.menu-animation {
+  opacity: 0;
+  visibility: hidden; }
+
+.navigation__item {
+  display: inline-block;
+  margin-right: 20px;
+  transform: translate3d(0, 3px, 0);
+  overflow: hidden; }
+  .navigation__item:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    background: #53c0c4;
+    transform: translate3d(-100%, 0, 0);
+    opacity: 0;
+    transition: opacity .3s, transform .3s; }
+  .navigation__item:nth-last-child(1) {
+    margin-right: 30px; }
+  .navigation__item:hover:after {
+    transform: none;
+    opacity: 1; }
+
+.navigation__item-name {
+  line-height: 1.3;
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: #fff;
+  text-decoration: none; }
+
+.navigation__button {
+  position: relative;
+  display: inline-block;
+  width: 27px;
+  height: 27px;
+  vertical-align: middle;
+  cursor: pointer; }
+  .navigation__button::before, .navigation__button::after {
+    position: absolute;
+    top: 50%;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    transform: translate3d(0px, -7px, 0);
+    transition: transform .2s; }
+  .navigation__button::after {
+    transform: translate3d(0, 5px, 0); }
+  .navigation__button--disappear {
+    display: none; }
+
+.navigation__button--active::before {
+  transform: translate3d(0px, -50%, 0) rotate(-45deg); }
+
+.navigation__button--active::after {
+  transform: translate3d(0px, -50%, 0) rotate(45deg); }
+
 header {
   position: relative;
   height: 60vh;
@@ -65,115 +163,6 @@ header {
   font-weight: 400;
   border-bottom: 2px solid #53c0c4;
   cursor: pointer; }
-
-.nav {
-  box-sizing: border-box;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 170px;
-  padding: 0px 90px; }
-
-.nav__logo-wrap {
-  float: left;
-  height: 100%; }
-  .nav__logo-wrap::before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle; }
-
-.nav__logo {
-  display: inline-block;
-  width: 170px;
-  height: 80px;
-  background: no-repeat center/100% url("../images/yambo_white.png");
-  vertical-align: middle; }
-
-.nav__menu-wrap {
-  float: right;
-  height: 100%; }
-  .nav__menu-wrap::before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle; }
-
-.nav__menu {
-  display: inline-block;
-  vertical-align: middle; }
-
-.nav__menu-button {
-  position: relative;
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  vertical-align: middle;
-  margin-left: 30px;
-  cursor: pointer; }
-  .nav__menu-button::before, .nav__menu-button::after {
-    position: absolute;
-    top: 50%;
-    content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    background: #fff;
-    transform: translate3d(0px, -7px, 0);
-    transition: transform .2s; }
-  .nav__menu-button::after {
-    transform: translate3d(0, 5px, 0); }
-
-.nav__menu-button--active::before {
-  transform: translate3d(0px, -50%, 0) rotate(-45deg); }
-
-.nav__menu-button--active::after {
-  transform: translate3d(0px, -50%, 0) rotate(45deg); }
-
-.sticky-nav {
-  box-sizing: border-box;
-  position: fixed;
-  top: 0px;
-  width: 100vw;
-  height: 100px;
-  padding: 0px 90px;
-  background: #000;
-  z-index: 1;
-  transition: transform .7s;
-  transform: translate3d(0, -100%, 0); }
-
-.sticky-nav--visible {
-  transform: none; }
-
-.sticky-nav__logo-wrap {
-  float: left;
-  height: 100%; }
-  .sticky-nav__logo-wrap::before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle; }
-
-.sticky-nav__logo {
-  display: inline-block;
-  width: 120px;
-  height: 60px;
-  background: no-repeat center/100% url("../images/yambo_white.png");
-  vertical-align: middle; }
-
-.sticky-nav__menu-wrap {
-  float: right;
-  height: 100%; }
-  .sticky-nav__menu-wrap::before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle; }
-
-.sticky-nav__menu {
-  display: inline-block;
-  vertical-align: middle; }
 
 section {
   width: 100vw;
@@ -508,48 +497,6 @@ footer {
   height: 3px;
   background: #53c0c4;
   margin-top: 4px; }
-
-.menu-item {
-  display: inline-block;
-  margin-right: 25px;
-  text-decoration: none;
-  overflow: hidden; }
-  .menu-item:nth-last-child(1) {
-    margin-right: 0px; }
-  .menu-item:hover .menu-item__underline {
-    opacity: 1;
-    transform: none; }
-
-.menu-item--active .menu-item__underline {
-  opacity: 1;
-  transform: none; }
-
-.menu-item__name {
-  line-height: 1.3;
-  font-size: 1.4rem;
-  font-weight: 300; }
-
-.menu-item__underline {
-  width: 100%;
-  height: 3px;
-  background: #53c0c4;
-  transition: opacity .3s, transform .3s;
-  opacity: 0;
-  transform: translate3d(-100%, 0, 0); }
-
-.menu-animation {
-  opacity: 0;
-  visibility: hidden; }
-
-.menu-animation--active {
-  transition: visibility .1s, opacity .5s .1s;
-  opacity: 1;
-  visibility: visible; }
-
-.menu-animation--deactive {
-  transition: opacity .5s, visibility .1s .5s;
-  opacity: 0;
-  visibility: hidden; }
 
 .loader {
   width: 100vw;
