feat: add title

--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -1,6 +1,6 @@
 .navigation {
   box-sizing: border-box;
-  width: 100%; height: 100px;
+  width: 100%; height: 90px;
   text-align: right;
   z-index: 1;
   padding: 0 90px;
@@ -9,7 +9,7 @@
   &--detached {
     position: absolute;
     top: 0px; left: 0px;
-    height: 200px;
+    height: 120px;
   }
 
   // attached to viewport
@@ -128,4 +128,17 @@
   &::after {
     transform: translate3d(0px, -50%, 0) rotate(45deg);
   }
+}
+
+.navigation__title-wrap {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+}
+
+.navigation__title {
+  font-size: 2rem;
+  font-weight: 500;
+  color: #fff;
+  text-decoration: none;
 }
