--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -37,7 +37,7 @@ table {
 .navigation {
   box-sizing: border-box;
   width: 100%;
-  height: 100px;
+  height: 90px;
   text-align: right;
   z-index: 1;
   padding: 0 90px; }
@@ -45,7 +45,7 @@ table {
     position: absolute;
     top: 0px;
     left: 0px;
-    height: 200px; }
+    height: 120px; }
   .navigation--attached {
     position: fixed;
     top: 0px;
@@ -132,6 +132,18 @@ table {
 .navigation__button--active::after {
   transform: translate3d(0px, -50%, 0) rotate(45deg); }
 
+.navigation__title-wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0); }
+
+.navigation__title {
+  font-size: 2rem;
+  font-weight: 500;
+  color: #fff;
+  text-decoration: none; }
+
 header {
   position: relative;
   height: 60vh;
@@ -159,9 +171,10 @@ header {
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
   color: #fff;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 400;
   border-bottom: 2px solid #53c0c4;
+  padding-bottom: 2px;
   cursor: pointer; }
 
 section {
