--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -26,8 +26,9 @@ header {
   top: 50%; left: 50%;
   transform: translate3d(-50%, -50%,0);
   color: #fff;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 400;
   border-bottom: 2px solid $main-color;
+  padding-bottom: 2px;
   cursor: pointer;
 }
