refactor: ui changed(footer, header, loader)
removed footer
replaced header module(header.js) with css
loader will be disappeared when finish load
remove data.js : insert data into main.js

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -2,6 +2,10 @@ header {
   position: relative;
   height: 60vh;
   overflow: hidden;
+
+  &:hover .header__cover {
+    opacity: 1;
+  }
 }
 
 .header__video {
@@ -15,10 +19,6 @@ header {
   background: rgba(0,0,0,0.8);
   opacity: 0;
   transition: opacity .5s;
-}
-
-.header__cover--active {
-  opacity: 1;
 }
 
 .header__showreel {
