--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -148,6 +148,8 @@ header {
   position: relative;
   height: 60vh;
   overflow: hidden; }
+  header:hover .header__cover {
+    opacity: 1; }
 
 .header__video {
   width: 100%; }
@@ -161,9 +163,6 @@ header {
   background: rgba(0, 0, 0, 0.8);
   opacity: 0;
   transition: opacity .5s; }
-
-.header__cover--active {
-  opacity: 1; }
 
 .header__showreel {
   position: absolute;
@@ -179,125 +178,13 @@ header {
 
 section {
   width: 100vw;
-  margin: 50px auto 0px auto; }
+  margin: 50px auto 0px auto;
+  overflow: hidden; }
 
 footer {
   width: 100vw;
-  height: 240px;
-  padding: 90px 0px 50px 0px;
-  margin: auto;
-  overflow: hidden; }
-
-.footer__logo-wrap {
-  float: left;
-  width: 17%;
-  height: 100%; }
-
-.footer__logo {
-  width: 130px;
-  height: 60px;
-  background: no-repeat center/100% url("../images/yambo_white.png");
+  height: 30px;
   margin: auto; }
-
-.footer__info-wrap {
-  position: relative;
-  float: right;
-  width: 70%;
-  height: 100%; }
-
-.footer__info {
-  position: absolute;
-  top: 0px; }
-  .footer__info--contacts {
-    left: 0%; }
-  .footer__info--find-us {
-    left: 30%; }
-  .footer__info--newsletter {
-    width: 33%;
-    left: 63%; }
-
-.footer__info-title {
-  color: #fff;
-  font-size: 0.9rem;
-  font-weight: 400;
-  line-height: 1.3;
-  margin-bottom: 3px; }
-
-.footer__info-description {
-  font-weight: 100;
-  font-size: 0.9rem;
-  line-height: 1.6;
-  color: #ddd; }
-
-.footer__app-wrap {
-  margin-top: 50px; }
-
-.footer__app {
-  margin-right: 15px;
-  color: #aaa;
-  font-size: 0.9rem; }
-  .footer__app:hover {
-    color: #53c0c4; }
-
-.footer__form {
-  width: 100%;
-  margin: 25px 0px 12px 0px;
-  border-bottom: 1px solid #999;
-  padding-bottom: 7px; }
-
-::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #bbb;
-  font-size: 0.9rem;
-  opacity: 1;
-  /* Firefox */ }
-
-:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: #bbb;
-  font-size: 0.9rem; }
-
-::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: #bbb;
-  font-size: 0.9rem; }
-
-.footer__input {
-  width: 70%;
-  outline: none;
-  padding: 0px;
-  font-size: 0.9rem;
-  color: #fff;
-  background: transparent;
-  border: none; }
-
-.footer__submit-button {
-  width: 30%;
-  color: #fff;
-  border: none;
-  outline: none;
-  background: transparent;
-  font-size: 0.9rem;
-  transition: color .2s;
-  padding: 0px;
-  cursor: pointer; }
-  .footer__submit-button:hover {
-    color: #53c0c4; }
-
-.footer__form-message {
-  color: #bd1a1a;
-  font-size: 0.9rem; }
-  .footer__form-message--submitted {
-    color: #0f8f2b; }
-
-.footer__copyright-policy {
-  position: absolute;
-  bottom: 0px;
-  left: 0%;
-  color: #ccc;
-  font-size: 0.7rem;
-  font-weight: 300;
-  line-height: 1.4; }
 
 .project {
   display: block;
@@ -513,8 +400,10 @@ footer {
 
 .loader {
   width: 100vw;
-  margin: 0px auto 15px auto;
+  margin: 0px auto;
   visibility: hidden; }
+  .loader--stop {
+    display: none; }
 
 .loader--loading {
   visibility: visible; }
