--- a/sass/partials/_project.scss
+++ b/sass/partials/_project.scss
@@ -5,7 +5,7 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  transition: transform 1.2s, opacity 1.2s;
+  transition: opacity 1.3s;
 
   &:hover .project__image {
     transform: scale(1.05);
@@ -30,7 +30,6 @@
 
 .project--invisible {
   opacity: 0;
-  transform: translate3d(0px, 5%, 0px);
 }
 
 .project__image {
