feat: add project subpage

--- a/sass/project/main.scss
+++ b/sass/project/main.scss
@@ -2,3 +2,9 @@
 
 @import 'partials/reset';
 @import 'partials/header';
+@import 'partials/navigation';
+@import 'partials/section';
+@import 'partials/snapshot';
+@import 'partials/loader';
+@import 'partials/video';
+@import 'partials/detail';
