--- a/public/stylesheets/project/main.css
+++ b/public/stylesheets/project/main.css
@@ -1,3 +1,7 @@
+body {
+  background: #000;
+  font-family: 'Roboto', 'Noto Sans KR', sans-serif; }
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -31,8 +35,214 @@ table {
   border-spacing: 0; }
 
 header {
+  position: relative;
+  height: 0px;
+  padding-top: 27%;
+  margin-top: 120px;
+  overflow: hidden; }
+
+.header__content {
+  position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
-  height: 100px;
-  background: red; }
+  height: 100%; }
+
+.header__image {
+  width: 100%; }
+
+.header__title {
+  position: absolute;
+  top: 15%;
+  left: 5%;
+  font-size: 5.5vw;
+  font-weight: 500;
+  color: #fff; }
+
+.navigation {
+  box-sizing: border-box;
+  width: 100%;
+  text-align: right;
+  z-index: 1;
+  padding: 0 90px; }
+  .navigation--detached {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 120px; }
+  .navigation--attached {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    height: 90px;
+    background: #000; }
+  .navigation--collapse {
+    transform: translate3d(0, -100%, 0); }
+  .navigation--stay-attached {
+    transition: transform .7s; }
+  .navigation:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+
+.navigation__item-list {
+  display: inline-block;
+  vertical-align: middle; }
+  .navigation__item-list--active {
+    transition: visibility .1s, opacity .5s .1s;
+    opacity: 1;
+    visibility: visible; }
+  .navigation__item-list--deactive {
+    transition: opacity .5s, visibility .1s .5s;
+    opacity: 0;
+    visibility: hidden; }
+
+.menu-animation {
+  opacity: 0;
+  visibility: hidden; }
+
+.navigation__item {
+  display: inline-block;
+  margin-right: 20px;
+  transform: translate3d(0, 3px, 0);
+  overflow: hidden; }
+  .navigation__item:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    background: #53c0c4;
+    transform: translate3d(-100%, 0, 0);
+    opacity: 0;
+    transition: opacity .3s, transform .3s; }
+  .navigation__item:nth-last-child(1) {
+    margin-right: 30px; }
+  .navigation__item:hover:after {
+    transform: none;
+    opacity: 1; }
+
+.navigation__item-name {
+  line-height: 1.3;
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: #fff;
+  text-decoration: none; }
+
+.navigation__button {
+  position: relative;
+  display: inline-block;
+  width: 27px;
+  height: 27px;
+  vertical-align: middle;
+  cursor: pointer; }
+  .navigation__button::before, .navigation__button::after {
+    position: absolute;
+    top: 50%;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    transform: translate3d(0px, -7px, 0);
+    transition: transform .2s; }
+  .navigation__button::after {
+    transform: translate3d(0, 5px, 0); }
+  .navigation__button--disappear {
+    display: none; }
+
+.navigation__button--active::before {
+  transform: translate3d(0px, -50%, 0) rotate(-45deg); }
+
+.navigation__button--active::after {
+  transform: translate3d(0px, -50%, 0) rotate(45deg); }
+
+.navigation__title-wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0); }
+
+.navigation__title {
+  font-size: 2rem;
+  font-weight: 500;
+  color: #fff;
+  text-decoration: none; }
+
+section {
+  width: 90vw;
+  margin: 50px auto; }
+
+.snapshot {
+  width: 100%;
+  margin-bottom: 2vw;
+  transition: opacity 1.3s; }
+  .snapshot--invisible {
+    opacity: 0; }
+
+.loader {
+  width: 90vw;
+  margin: 0px auto;
+  visibility: hidden; }
+  .loader--stop {
+    display: none; }
+
+.loader--loading {
+  visibility: visible; }
+
+.loading-icon {
+  width: 60px;
+  height: 60px;
+  background: no-repeat center/100% url("../../images/loading-icon.gif");
+  margin: auto; }
+
+.video-wrap {
+  width: 90vw;
+  margin: 50px auto 0px auto; }
+
+.video {
+  position: relative;
+  height: 0px;
+  padding-top: 56.5%; }
+
+.video-content {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%; }
+
+.video__loading-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 45px;
+  height: 45px;
+  transform: translate3d(-50%, -50%, 0);
+  background: no-repeat center/100% url("../../images/loading-icon.gif"); }
+  .video__loading-icon--disappear {
+    display: none; }
+
+.detail-list {
+  width: 90vw;
+  margin: 50px auto; }
+
+.detail-list-item {
+  line-height: 1.3; }
+  .detail-list-item--role {
+    margin-top: 20px; }
+
+.detail-list-item__name {
+  display: inline-block;
+  width: 100px;
+  height: 100%;
+  font-size: 1.3rem;
+  font-weight: 300;
+  color: #fff; }
+
+.detail-list-item__description {
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 100; }
 
 /*# sourceMappingURL=main.css.map */
