refactor: project subpage detail-list bottom margin styling

--- a/public/stylesheets/project/main.css
+++ b/public/stylesheets/project/main.css
@@ -225,7 +225,7 @@ section {
 
 .detail-list {
   width: 90vw;
-  margin: 50px auto; }
+  margin: 50px auto 300px auto; }
 
 .detail-list-item {
   line-height: 1.3; }
