design: layout change

--- a/public/stylesheets/home/main.css
+++ b/public/stylesheets/home/main.css
@@ -139,7 +139,7 @@ table {
   transform: translate3d(-50%, -50%, 0); }
 
 .navigation__title {
-  font-size: 2rem;
+  font-size: 1.4rem;
   font-weight: 500;
   color: #fff;
   text-decoration: none; }
@@ -152,7 +152,11 @@ header {
     opacity: 1; }
 
 .header__video {
-  width: 100%; }
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  width: 100%;
+  transform: translate3d(0, -50%, 0); }
 
 .header__cover {
   position: absolute;
