--- a/sass/project/partials/_header.scss
+++ b/sass/project/partials/_header.scss
@@ -18,8 +18,9 @@ header {
 
 .header__title {
   position: absolute;
-  top: 15%; left: 5%;
-  font-size: 5.5vw;
+  top: 13%; left: 50%;
+  font-size: 2.3vw;
   font-weight: 500;
   color: #fff;
+  transform: translate3d(-50%, 0, 0);
 }
