--- a/public/stylesheets/project/main.css
+++ b/public/stylesheets/project/main.css
@@ -53,11 +53,12 @@ header {
 
 .header__title {
   position: absolute;
-  top: 15%;
-  left: 5%;
-  font-size: 5.5vw;
+  top: 13%;
+  left: 50%;
+  font-size: 2.3vw;
   font-weight: 500;
-  color: #fff; }
+  color: #fff;
+  transform: translate3d(-50%, 0, 0); }
 
 .navigation {
   box-sizing: border-box;
@@ -164,7 +165,7 @@ header {
   transform: translate3d(-50%, -50%, 0); }
 
 .navigation__title {
-  font-size: 2rem;
+  font-size: 1.4rem;
   font-weight: 500;
   color: #fff;
   text-decoration: none; }
