--- a/sass/home/partials/_header.scss
+++ b/sass/home/partials/_header.scss
@@ -9,7 +9,10 @@ header {
 }
 
 .header__video {
+  position: absolute;
+  top: 50%; left: 0px;
   width: 100%;
+  transform: translate3d(0, -50%, 0);
 }
 
 .header__cover {
