feat: add option to modify snapshot column

--- a/views/project.pug
+++ b/views/project.pug
@@ -18,7 +18,7 @@ html(lang="en")
         div.video
           div.video-content
             iframe(src=videoUrl width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen)
-    section
+    section(data-column=snapshotColumn)
     div.loader
       div.loading-icon
     ul.detail-list
