--- a/sass/project/partials/_header.scss
+++ b/sass/project/partials/_header.scss
@@ -13,12 +13,15 @@ header {
 }
 
 .header__image {
+  position: absolute;
+  top: 50%;
   width: 100%;
+  transform: translate3d(0, -50%, 0);
 }
 
 .header__title {
   position: absolute;
-  top: 13%; left: 50%;
+  top: 13%; left: 10%;
   font-size: 2.3vw;
   font-weight: 500;
   color: #fff;
