--- a/sass/home/partials/_project.scss
+++ b/sass/home/partials/_project.scss
@@ -7,6 +7,10 @@
   cursor: pointer;
   transition: opacity 1.3s;
 
+  @media only screen and (max-width: 425px) {
+    width: 50vw; height: 50vw;
+  }
+
   &:hover .project__image {
     transform: scale(1.05);
   }
