--- a/views/home.pug
+++ b/views/home.pug
@@ -12,14 +12,7 @@ html(lang="ko")
       video.header__video(autoplay loop muted)
       div.header__cover
         div.header__showreel Showreel
-    nav.navigation.navigation--detached
-      ul.navigation__item-list.navigation__item-list--deactive
-        each menuItem in menuItems
-          li.navigation__item
-            a.navigation__item-name(href=menuItem.path) #{menuItem.name}
-      div.navigation__button
-      div.navigation__title-wrap
-        a.navigation__title(href="/") SungHwan Lee
+    include navigation.pug
     section
     div.loader
       div.loading-icon
