feat: support mobile on project subpage

--- a/sass/project/partials/_base.scss
+++ b/sass/project/partials/_base.scss
@@ -5,8 +5,7 @@ $header-height-ratio: 27%; // compares to header width
 
 $video-height-ratio: 56.5%; // compares to video width
 
-$detached-navigation-height: 120px;
-$attached-navigation-height: 90px;
+$navigation-height: 90px;
 
 
 body {
