--- a/sass/project/partials/_header.scss
+++ b/sass/project/partials/_header.scss
@@ -2,7 +2,7 @@ header {
   position: relative;
   height: 0px;
   padding-top: $header-height-ratio;
-  margin-top: $detached-navigation-height;
+  margin-top: $navigation-height;
   overflow: hidden;
 }
 
