--- a/public/stylesheets/project/main.css
+++ b/public/stylesheets/project/main.css
@@ -38,7 +38,7 @@ header {
   position: relative;
   height: 0px;
   padding-top: 27%;
-  margin-top: 120px;
+  margin-top: 90px;
   overflow: hidden; }
 
 .header__content {
@@ -64,21 +64,24 @@ header {
   transform: translate3d(-50%, 0, 0); }
 
 .navigation {
+  position: relative;
   box-sizing: border-box;
   width: 100%;
+  height: 90px;
   text-align: right;
   z-index: 1;
   padding: 0 90px; }
+  @media only screen and (max-width: 425px) {
+    .navigation {
+      padding: 0px; } }
   .navigation--detached {
     position: absolute;
     top: 0px;
-    left: 0px;
-    height: 120px; }
+    left: 0px; }
   .navigation--attached {
     position: fixed;
     top: 0px;
     left: 0px;
-    height: 90px;
     background: #000; }
   .navigation--collapse {
     transform: translate3d(0, -100%, 0); }
@@ -101,6 +104,16 @@ header {
     transition: opacity .5s, visibility .1s .5s;
     opacity: 0;
     visibility: hidden; }
+  @media only screen and (max-width: 425px) {
+    .navigation__item-list {
+      display: block;
+      box-sizing: border-box;
+      position: fixed;
+      top: 90px;
+      width: 100%;
+      height: calc(100vh - 90px);
+      background: rgba(0, 0, 0, 0.8);
+      padding: 150px 100px; } }
 
 .menu-animation {
   opacity: 0;
@@ -108,10 +121,30 @@ header {
 
 .navigation__item {
   display: inline-block;
-  margin-right: 20px;
-  transform: translate3d(0, 3px, 0);
+  margin: 0 20px 0 0;
+  transform: translate3d(0, 3px, 0); }
+  .navigation__item:nth-last-child(1) {
+    margin-right: 30px; }
+  .navigation__item:hover .navigation__item-name:after, .navigation__item--active .navigation__item-name:after {
+    transform: none;
+    opacity: 1; }
+  @media only screen and (max-width: 425px) {
+    .navigation__item {
+      display: block;
+      text-align: center;
+      margin: 30px 0; }
+      .navigation__item:nth-last-child(1) {
+        margin-right: 0px; } }
+
+.navigation__item-name {
+  display: inline-block;
+  line-height: 1.3;
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: #fff;
+  text-decoration: none;
   overflow: hidden; }
-  .navigation__item:after {
+  .navigation__item-name:after {
     content: '';
     display: block;
     width: 100%;
@@ -120,18 +153,6 @@ header {
     transform: translate3d(-100%, 0, 0);
     opacity: 0;
     transition: opacity .3s, transform .3s; }
-  .navigation__item:nth-last-child(1) {
-    margin-right: 30px; }
-  .navigation__item:hover:after, .navigation__item--active:after {
-    transform: none;
-    opacity: 1; }
-
-.navigation__item-name {
-  line-height: 1.3;
-  font-size: 1.4rem;
-  font-weight: 300;
-  color: #fff;
-  text-decoration: none; }
 
 .navigation__button {
   position: relative;
@@ -140,6 +161,9 @@ header {
   height: 27px;
   vertical-align: middle;
   cursor: pointer; }
+  @media only screen and (max-width: 425px) {
+    .navigation__button {
+      margin-right: 30px; } }
   .navigation__button::before, .navigation__button::after {
     position: absolute;
     top: 50%;
