feat: apply server-side-rendering(pug) to info page

--- a/views/info.pug
+++ b/views/info.pug
@@ -9,7 +9,7 @@ html(lang="en")
     link(rel="stylesheet" href="/stylesheets/info/main.css")
     title info
   body
-    nav.navigation.navigation--detached
+    include navigation.pug
     div.info
       div.info__title SUNG HWAN LEE
       div.info__profile 3D Generalist #{'&'} Motion Designer
