--- a/sass/info/partials/_base.scss
+++ b/sass/info/partials/_base.scss
@@ -1,7 +1,6 @@
 $main-color: rgb(83, 192, 196);
 
-$detached-navigation-height: 120px;
-$attached-navigation-height: 90px;
+$navigation-height: 90px;
 
 body {
   background: #000;
