--- a/sass/info/partials/_info.scss
+++ b/sass/info/partials/_info.scss
@@ -1,6 +1,7 @@
 %info-normal-text {
   font-size: 1.4vw;
   font-weight: 300;
+  line-height: 1.3;
 }
 
 .info {
@@ -10,6 +11,11 @@
   color: #fff;
   text-align: center;
 
+  @media only screen and (max-width: 425px) {
+    height: auto;
+    padding: 150px 0px;
+  }
+
   // background image
   &:after {
     content: '';
@@ -18,6 +24,10 @@
     background: url('../../images/Pingpong.jpg') center / 100% no-repeat;
     z-index: -1;
     opacity: 0.6;
+
+    @media only screen and (max-width: 425px) {
+      background-size: auto 100%;
+    }
   }
 }
 
@@ -27,6 +37,11 @@
   width: 100%;
   font-size: 3.5vw;
   font-weight: 500;
+
+  @media only screen and (max-width: 425px) {
+    position: static;
+    font-size: 8vw;
+  }
 }
 
 .info__profile {
@@ -34,6 +49,12 @@
   position: absolute;
   top: 26%;
   width: 100%;
+
+  @media only screen and (max-width: 425px) {
+    position: static;
+    font-size: 4vw;
+    margin-top: 10px;
+  }
 }
 
 .info__phone {
@@ -41,6 +62,12 @@
   position: absolute;
   top: 46%;
   width: 100%;
+
+  @media only screen and (max-width: 425px) {
+    position: static;
+    font-size: 4vw;
+    margin-top: 100px;
+  }
 }
 
 .info__email {
@@ -48,6 +75,12 @@
   position: absolute;
   top: 50%;
   width: 100%;
+
+  @media only screen and (max-width: 425px) {
+    position: static;
+    font-size: 4vw;
+    margin-top: 20px;
+  }
 }
 
 .info__tools {
@@ -56,6 +89,12 @@
   position: absolute;
   top: 67%;
   width: 100%;
+
+  @media only screen and (max-width: 425px) {
+    position: static;
+    font-size: 6vw;
+    margin-top: 100px;
+  }
 }
 
 .info__tool1 {
@@ -63,6 +102,15 @@
   position: absolute;
   top: 72%;
   width: 100%;
+
+  @media only screen and (max-width: 425px) {
+    box-sizing: border-box;
+    position: static;
+    font-size: 4vw;
+    margin-top: 10px;
+    padding: 0px 30vw;
+    line-height: 1.8;
+  }
 }
 
 .info__tool2 {
@@ -70,12 +118,26 @@
   position: absolute;
   top: 75%;
   width: 100%;
+
+  @media only screen and (max-width: 425px) {
+    box-sizing: border-box;
+    position: static;
+    font-size: 4vw;
+    margin-top: 15px;
+    padding: 0px 30vw;
+    line-height: 1.8;
+  }
 }
 
 .info__socials {
   position: absolute;
   top: 92%;
   width: 100%;
+
+  @media only screen and (max-width: 425px) {
+    position: static;
+    margin-top: 60px;
+  }
 }
 
 .info__socials-icon {
@@ -89,5 +151,10 @@
 
   &:hover {
     color: $main-color;
+  }
+
+  @media only screen and (max-width: 425px) {
+    position: static;
+    font-size: 8vw;
   }
 }
