--- a/sass/info/partials/_navigation.scss
+++ b/sass/info/partials/_navigation.scss
@@ -1,15 +1,19 @@
 .navigation {
+  position: relative;
   box-sizing: border-box;
-  width: 100%; height: 90px;
+  width: 100%; height: $navigation-height;
   text-align: right;
   z-index: 1;
   padding: 0 90px;
+
+  @media only screen and (max-width: 425px) {
+    padding: 0px;
+  }
 
   // detached to viewport
   &--detached {
     position: absolute;
     top: 0px; left: 0px;
-    height: 120px;
   }
 
   // attached to viewport
@@ -51,6 +55,16 @@
     opacity: 0;
     visibility: hidden;
   }
+
+  @media only screen and (max-width: 425px) {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    position: fixed;
+    top: 0px;
+    width: 100%; height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+  }
 }
 
 .menu-animation {
@@ -60,8 +74,46 @@
 
 .navigation__item {
   display: inline-block;
-  margin-right: 20px;
+  margin: 0 20px 0 0;
   transform: translate3d(0, 3px, 0);
+
+  &:nth-last-child(1) {
+    margin-right: 30px;
+  }
+
+  &:hover .navigation__item-name:after, &--active .navigation__item-name:after {
+    transform: none;
+    opacity: 1;
+  }
+
+  @media only screen and (max-width: 425px) {
+    position: absolute;
+    top: 50%; left: 50%;
+    display: block;
+    text-align: center;
+    margin: 0;
+    
+    &:nth-child(1) {
+      transform: translate3d(-50%, -250%, 0);
+    }
+
+    &:nth-child(2) {
+      transform: translate3d(-50%, -50%, 0);
+    }
+
+    &:nth-child(3) {
+      transform: translate3d(-50%, 150%, 0);
+    }
+  }
+}
+
+.navigation__item-name {
+  display: inline-block;
+  line-height: 1.3;
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: #fff;
+  text-decoration: none;
   overflow: hidden;
 
   // underline
@@ -74,23 +126,6 @@
     opacity: 0;
     transition: opacity .3s, transform .3s;
   }
-
-  &:nth-last-child(1) {
-    margin-right: 30px;
-  }
-
-  &:hover:after, &--active:after {
-    transform: none;
-    opacity: 1;
-  }
-}
-
-.navigation__item-name {
-  line-height: 1.3;
-  font-size: 1.4rem;
-  font-weight: 300;
-  color: #fff;
-  text-decoration: none;
 }
 
 .navigation__button {
@@ -99,6 +134,10 @@
   width: 27px; height: 27px;
   vertical-align: middle;
   cursor: pointer;
+
+  @media only screen and (max-width: 425px) {
+    margin-right: 30px;
+  }
 
   &::before, &::after {
     position: absolute;
