feat: support mobile(work, lab page) and apply pug

--- a/sass/lab/partials/_base.scss
+++ b/sass/lab/partials/_base.scss
@@ -1,7 +1,6 @@
 $main-width: 100vw;
 
-$detached-navigation-height: 120px;
-$attached-navigation-height: 90px;
+$navigation-height: 90px;
 
 $video-width: 70vw;
 $video-height-ratio: 56.5%;
