--- a/sass/work/partials/_navigation.scss
+++ b/sass/work/partials/_navigation.scss
@@ -1,15 +1,19 @@
 .navigation {
+  position: relative;
   box-sizing: border-box;
-  width: 100%;
+  width: 100%; height: $navigation-height;
   text-align: right;
   z-index: 1;
   padding: 0 90px;
+
+  @media only screen and (max-width: 425px) {
+    padding: 0px;
+  }
 
   // detached to viewport
   &--detached {
     position: absolute;
     top: 0px; left: 0px;
-    height: $detached-navigation-height;
   }
 
   // attached to viewport
@@ -17,7 +21,6 @@
     position: fixed;
     top: 0px; left: 0px;
     background: #000;
-    height: $attached-navigation-height;
   }
 
   &--collapse {
@@ -52,6 +55,16 @@
     opacity: 0;
     visibility: hidden;
   }
+
+  @media only screen and (max-width: 425px) {
+    display: block;
+    box-sizing: border-box;
+    position: fixed;
+    top: $navigation-height;
+    width: 100%; height: calc(100vh - #{$navigation-height});
+    background: rgba(0, 0, 0, 0.8);
+    padding: 150px 100px;
+  }
 }
 
 .menu-animation {
@@ -61,8 +74,36 @@
 
 .navigation__item {
   display: inline-block;
-  margin-right: 20px;
+  margin: 0 20px 0 0;
   transform: translate3d(0, 3px, 0);
+
+  &:nth-last-child(1) {
+    margin-right: 30px;
+  }
+
+  &:hover .navigation__item-name:after, &--active .navigation__item-name:after {
+    transform: none;
+    opacity: 1;
+  }
+
+  @media only screen and (max-width: 425px) {
+    display: block;
+    text-align: center;
+    margin: 30px 0;
+
+    &:nth-last-child(1) {
+      margin-right: 0px;
+    }
+  }
+}
+
+.navigation__item-name {
+  display: inline-block;
+  line-height: 1.3;
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: #fff;
+  text-decoration: none;
   overflow: hidden;
 
   // underline
@@ -75,23 +116,6 @@
     opacity: 0;
     transition: opacity .3s, transform .3s;
   }
-
-  &:nth-last-child(1) {
-    margin-right: 30px;
-  }
-
-  &:hover:after, &--active:after {
-    transform: none;
-    opacity: 1;
-  }
-}
-
-.navigation__item-name {
-  line-height: 1.3;
-  font-size: 1.4rem;
-  font-weight: 300;
-  color: #fff;
-  text-decoration: none;
 }
 
 .navigation__button {
@@ -100,6 +124,10 @@
   width: 27px; height: 27px;
   vertical-align: middle;
   cursor: pointer;
+
+  @media only screen and (max-width: 425px) {
+    margin-right: 30px;
+  }
 
   &::before, &::after {
     position: absolute;
