feat: mark current location in menuItems
gave option to display current index in navigation

--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -1,7 +1,9 @@
 nav.navigation.navigation--detached
   ul.navigation__item-list.navigation__item-list--deactive
-    each menuItem in menuItems
-      li.navigation__item
+    each menuItem, index in menuItems
+      li.navigation__item(class={
+        'navigation__item--active': index === activeMenuIndex,
+      })
         a.navigation__item-name(href=menuItem.path) #{menuItem.name}
   div.navigation__button
   div.navigation__title-wrap
